--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -93,12 +93,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -146,7 +148,9 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Textures
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -173,7 +177,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
+UNR=../../../../../GameDesign2/GameDesign2/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 FBX=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 FBXAnim=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
@@ -1025,9 +1029,15 @@ Voice.TimeStamp=2021.08.31-15.24.33
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2021.08.31-15.24.22
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.08.31-15.24.02
+BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.08.31-15.24.27
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem1=/Game/2DSideScrollerBP/Maps/SS_game
+MRUItem2=/Game/StarterContent/Maps/SS_game
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1507,29 +1517,57 @@ K2Node_Composite.GraphNodeDetail=True
 K2Node_Composite.Graph=True
 K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=False
+Button.Accessibility=False
+Button.Behavior=False
+Button.Render Transform=False
+Button.Performance=False
+Button.Clipping=False
+Button.Navigation=False
+Button.Localization=False
+Button.Events=True
+K2Node_VariableSet.Events=True
+SS_game_C.Tick=True
+SS_game_C.Replication=True
+SS_game_C.Actor=True
+SS_game_C.Input=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Textures/ZStart_Screen
-MRUItem1=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
-MRUItem2=/Game/2DSideScroller/Sprites/Level1_TileMap1
-MRUItem3=/Game/2DSideScroller/Sprites/Level1_TileMap
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem5=/Game/2DSideScroller/Data/AnimationState
-MRUItem6=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem7=/Game/2DSideScroller/Sprites/Level1_TileSet
-MRUItem8=/Game/2DSideScroller/animations/PC_shoot
-MRUItem9=/Game/2DSideScroller/animations/PC_run
-MRUItem10=/Game/2DSideScroller/animations/PC_hurt
-MRUItem11=/Game/2DSideScroller/animations/PC_idle
-MRUItem12=/Game/2DSideScroller/animations/PC_jump
-MRUItem13=/Game/2DSideScroller/animations/PC_projectile
-MRUItem14=/Game/2DSideScroller/Textures/4_Ramsey_CharacterComplete
-MRUItem15=/Game/2DSideScroller/Textures/4_Ramsey_Tileset
-MRUItem16=/Game/2DSideScroller/Sprites/4_Ramsey_CharacterComplete
-MRUItem17=/Game/2DSideScrollerBP/4_Ramsey_CharacterComplete
+MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem1=/Game/2DSideScroller/Textures/1StartScreen
+MRUItem2=/Game/StarterContent/Maps/SS_game
+MRUItem3=/Game/2DSideScroller/Textures/ZStart_Screen
+MRUItem4=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
+MRUItem5=/Game/2DSideScroller/Sprites/Level1_TileMap1
+MRUItem6=/Game/2DSideScroller/Sprites/Level1_TileMap
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem8=/Game/2DSideScroller/Data/AnimationState
+MRUItem9=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem10=/Game/2DSideScroller/Sprites/Level1_TileSet
+MRUItem11=/Game/2DSideScroller/animations/PC_shoot
+MRUItem12=/Game/2DSideScroller/animations/PC_run
+MRUItem13=/Game/2DSideScroller/animations/PC_hurt
+MRUItem14=/Game/2DSideScroller/animations/PC_idle
+MRUItem15=/Game/2DSideScroller/animations/PC_jump
+MRUItem16=/Game/2DSideScroller/animations/PC_projectile
+MRUItem17=/Game/2DSideScroller/Textures/4_Ramsey_CharacterComplete
+MRUItem18=/Game/2DSideScroller/Textures/4_Ramsey_Tileset
+MRUItem19=/Game/2DSideScroller/Sprites/4_Ramsey_CharacterComplete
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1550,14 +1588,21 @@ LastLogListing=LoadErrors
 /Game/2DSideScroller/Sprites/Level1_TileMap1.Level1_TileMap1=1
 /Game/2DSideScroller/Sprites/4_Ramsey_Tileset.4_Ramsey_Tileset=1
 /Game/2DSideScroller/Textures/ZStart_Screen.ZStart_Screen=1
+/Game/2DSideScroller/Textures/1StartScreen.1StartScreen=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
