--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+LastLevel=/Game/2DSideScrollerBP/Maps/SS_game
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1035,8 +1035,8 @@ SequencerWidgets.TimeStamp=2021.08.31-15.24.27
 SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem1=/Game/2DSideScrollerBP/Maps/SS_game
+MRUItem0=/Game/2DSideScrollerBP/Maps/SS_game
+MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem2=/Game/StarterContent/Maps/SS_game
 
 [DetailCategories]
@@ -1543,31 +1543,48 @@ SS_game_C.Tick=True
 SS_game_C.Replication=True
 SS_game_C.Actor=True
 SS_game_C.Input=True
+1StartScreen_C.Appearance=True
+1StartScreen_C.Input=True
+1StartScreen_C.Interaction=True
+1StartScreen_C.Performance=True
+1StartScreen_C.Layout=True
+1StartScreen_C.Behavior=True
+1StartScreen_C.Render Transform=True
+1StartScreen_C.Navigation=True
+1StartScreen_C.Designer=True
+1StartScreen_C.Accessibility=True
+1StartScreen_C.Clipping=True
+1StartScreen_C.Localization=True
+MapBuildDataRegistry.Lighting=True
+2DSideScrollerExampleMap_C.Tick=True
+2DSideScrollerExampleMap_C.Replication=True
+2DSideScrollerExampleMap_C.Actor=True
+2DSideScrollerExampleMap_C.Input=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem1=/Game/2DSideScroller/Textures/1StartScreen
-MRUItem2=/Game/StarterContent/Maps/SS_game
-MRUItem3=/Game/2DSideScroller/Textures/ZStart_Screen
-MRUItem4=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
-MRUItem5=/Game/2DSideScroller/Sprites/Level1_TileMap1
-MRUItem6=/Game/2DSideScroller/Sprites/Level1_TileMap
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem8=/Game/2DSideScroller/Data/AnimationState
-MRUItem9=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem10=/Game/2DSideScroller/Sprites/Level1_TileSet
-MRUItem11=/Game/2DSideScroller/animations/PC_shoot
-MRUItem12=/Game/2DSideScroller/animations/PC_run
-MRUItem13=/Game/2DSideScroller/animations/PC_hurt
-MRUItem14=/Game/2DSideScroller/animations/PC_idle
-MRUItem15=/Game/2DSideScroller/animations/PC_jump
-MRUItem16=/Game/2DSideScroller/animations/PC_projectile
-MRUItem17=/Game/2DSideScroller/Textures/4_Ramsey_CharacterComplete
-MRUItem18=/Game/2DSideScroller/Textures/4_Ramsey_Tileset
-MRUItem19=/Game/2DSideScroller/Sprites/4_Ramsey_CharacterComplete
+MRUItem0=/Game/2DSideScroller/Textures/1StartScreen
+MRUItem1=/Game/2DSideScrollerBP/Maps/SS_game
+MRUItem2=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem3=/Game/StarterContent/Maps/SS_game
+MRUItem4=/Game/2DSideScroller/Textures/ZStart_Screen
+MRUItem5=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
+MRUItem6=/Game/2DSideScroller/Sprites/Level1_TileMap1
+MRUItem7=/Game/2DSideScroller/Sprites/Level1_TileMap
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem9=/Game/2DSideScroller/Data/AnimationState
+MRUItem10=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem11=/Game/2DSideScroller/Sprites/Level1_TileSet
+MRUItem12=/Game/2DSideScroller/animations/PC_shoot
+MRUItem13=/Game/2DSideScroller/animations/PC_run
+MRUItem14=/Game/2DSideScroller/animations/PC_hurt
+MRUItem15=/Game/2DSideScroller/animations/PC_idle
+MRUItem16=/Game/2DSideScroller/animations/PC_jump
+MRUItem17=/Game/2DSideScroller/animations/PC_projectile
+MRUItem18=/Game/2DSideScroller/Textures/4_Ramsey_CharacterComplete
+MRUItem19=/Game/2DSideScroller/Textures/4_Ramsey_Tileset
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1589,20 +1606,25 @@ LastLogListing=LoadErrors
 /Game/2DSideScroller/Sprites/4_Ramsey_Tileset.4_Ramsey_Tileset=1
 /Game/2DSideScroller/Textures/ZStart_Screen.ZStart_Screen=1
 /Game/2DSideScroller/Textures/1StartScreen.1StartScreen=1
+/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap_BuiltData.2DSideScrollerExampleMap_BuiltData=1
+/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
+/Game/2DSideScrollerBP/Maps/SS_game.SS_game:PersistentLevel.SS_game=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+1StartScreen_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
