--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -93,12 +93,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1910,Y=1006)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+NewWindowWidth=1910
+NewWindowHeight=1006
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -146,18 +150,17 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+LastLevel=/Game/2DSideScrollerBP/Maps/SS_GAME
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileMap.4_Border_TileSet_TileMap
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1032,6 +1035,8 @@ BlueprintGraph.TimeStamp=2022.10.31-14.34.42
 BlueprintGraph.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2022.10.31-14.34.53
 TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.10.31-14.34.52
+SequencerWidgets.LastCompileMethod=Unknown
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1337,9 +1342,53 @@ TextRenderActor.Cooking=True
 TextRenderActor.Replication=True
 TextRenderActor.Input=True
 TextRenderActor.Actor=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+SS_GAME_C.Appearance=True
+SS_GAME_C.Input=True
+SS_GAME_C.Interaction=True
+SS_GAME_C.Performance=True
+SS_GAME_C.Layout=True
+SS_GAME_C.Behavior=True
+SS_GAME_C.Render Transform=True
+SS_GAME_C.Navigation=True
+SS_GAME_C.Designer=True
+SS_GAME_C.Accessibility=True
+SS_GAME_C.Clipping=True
+SS_GAME_C.Localization=True
+SS_GAME_C.Tick=True
+SS_GAME_C.Replication=True
+SS_GAME_C.Actor=True
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/2DSideScrollerBP/Maps/SS_GAME
+MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1347,6 +1396,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/title/StartButton.StartButton;
 RecentlyPlaced=/Game/2DSideScroller/Sprites/Border.Border;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Ring.Ring;
 RecentlyPlaced=/Game/2DSideScroller/Animations/Ring.Ring;
@@ -1361,26 +1411,26 @@ RecentlyPlaced=/Game/2DSideScrollerBP/4_Border_Character-Idle.4_Border_Character
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileMap
-MRUItem1=/Game/2DSideScroller/Sprites/Border
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/Ring
-MRUItem4=/Game/Data/AnimationState
-MRUItem5=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileSet
-MRUItem6=/Game/2DSideScroller/Sprites/4_Border_TileSet_Sprite
-MRUItem7=/Game/2DSideScroller/Sprites/4_Border_TileSet
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem9=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem10=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem11=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem12=/Game/2DSideScroller/Animations/Ring
-MRUItem13=/Game/2DSideScroller/Animations/PC_Run
-MRUItem14=/Game/2DSideScroller/Animations/PC_Jump
-MRUItem15=/Game/2DSideScroller/Sprites/PC_Run
-MRUItem16=/Game/2DSideScroller/Sprites/PC_Shoot
-MRUItem17=/Game/2DSideScroller/Sprites/4_Border_Character-Idle_Sprite_13
-MRUItem18=/Game/2DSideScrollerBP/4_Border_Character-Idle
-MRUItem19=/Game/2DSideScrollerBP/4_Border_TileSet
+MRUItem0=/Game/2DSideScrollerBP/Maps/SS_GAME
+MRUItem1=/Game/2DSideScroller/title/SS_GAME
+MRUItem2=/Game/2DSideScroller/title/background_elements
+MRUItem3=/Game/2DSideScroller/title/NewWidgetBlueprint
+MRUItem4=/Game/2DSideScroller/title/StartButton
+MRUItem5=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileMap
+MRUItem6=/Game/2DSideScroller/Sprites/Border
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/Ring
+MRUItem9=/Game/Data/AnimationState
+MRUItem10=/Game/2DSideScroller/Sprites/4_Border_TileSet_TileSet
+MRUItem11=/Game/2DSideScroller/Sprites/4_Border_TileSet_Sprite
+MRUItem12=/Game/2DSideScroller/Sprites/4_Border_TileSet
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem14=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem15=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem16=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem17=/Game/2DSideScroller/Animations/Ring
+MRUItem18=/Game/2DSideScroller/Animations/PC_Run
+MRUItem19=/Game/2DSideScroller/Animations/PC_Jump
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/4_Border_TileSet.4_Border_TileSet=1
@@ -1401,10 +1451,16 @@ MRUItem19=/Game/2DSideScrollerBP/4_Border_TileSet
 /Game/Data/AnimationState.AnimationState=1
 /Game/2DSideScrollerBP/Blueprints/Ring.Ring=1
 /Game/2DSideScroller/Sprites/Border.Border=1
+/Game/2DSideScroller/title/StartButton.StartButton=1
+/Game/2DSideScroller/title/Background_copy.Background_copy=1
+/Game/2DSideScroller/title/background_elements.background_elements=1
+/Game/2DSideScroller/title/SS_GAME.SS_GAME=1
+/Game/2DSideScroller/title/SONIC_THE_HEDGEHOG.SONIC_THE_HEDGEHOG=1
+/Game/2DSideScrollerBP/Maps/SS_GAME.SS_GAME:PersistentLevel.SS_GAME=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames.KeyFrames[9]\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 SpringArmComponent="\"Object.Camera.SocketOffset\" "
 SceneComponent=
 ActorComponent=
@@ -1413,6 +1469,14 @@ PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[0]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" "
+SS_GAME_C="\"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1453,4 +1517,101 @@ NodeTemplateCacheCapMB=20.000000
 [DetailCategoriesAdvanced]
 CapsuleComponent.Shape=False
 PropertyWrapper.Variable=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1920
+PreviewHeight=1080
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=True
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+
+[PropertyWindowExpansion]
+Texture2D="Object.Compression Object.LevelOfDetail "
+Texture="Object.Compression Object.LevelOfDetail "
+StreamableRenderAsset="Object.Compression Object.LevelOfDetail "
+Object="Object.Compression Object.LevelOfDetail "
 
