--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,8 +158,8 @@ LastLevel=/Game/2DSideScrollerBP/Maps/StartMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/StartMenu.StartMenu
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/StartMenu.StartMenu:PersistentLevel.StartMenu
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScroller/Animations/Explosion1.Explosion1
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1097,26 +1097,26 @@ MRUItem7=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 MRUItem8=/Game/2DSideScrollerBP/Maps/Tutorial
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem1=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem2=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem3=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/Bullet
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
-MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem13=/Game/2DSideScrollerBP/Maps/FullLevel_Map
-MRUItem14=/Game/2DSideScroller/Animations/Enemy_Hurt
-MRUItem15=/Game/Data/AnimationStateEnemy
-MRUItem16=/Game/2DSideScrollerBP/Blueprints/HpHud
-MRUItem17=/Game/2DSideScrollerBP/Blueprints/Heal
-MRUItem18=/Game/2DSideScrollerBP/Blueprints/TutorialEnemy1
-MRUItem19=/Game/2DSideScroller/Textures/Heart_Flipbook
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/Explosion
+MRUItem2=/Game/2DSideScroller/Textures/Explosion1
+MRUItem3=/Game/2DSideScroller/Textures/Explosion
+MRUItem4=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem6=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/Bullet
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
+MRUItem13=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem14=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
+MRUItem15=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
+MRUItem16=/Game/2DSideScrollerBP/Maps/FullLevel_Map
+MRUItem17=/Game/2DSideScroller/Animations/Enemy_Hurt
+MRUItem18=/Game/Data/AnimationStateEnemy
+MRUItem19=/Game/2DSideScrollerBP/Blueprints/HpHud
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1996,6 +1996,12 @@ StartMenu_C.Tick=True
 StartMenu_C.Replication=True
 StartMenu_C.Actor=True
 StartMenu_C.Input=True
+Explosion_C.Tick=True
+Explosion_C.Replication=True
+Explosion_C.Rendering=True
+Explosion_C.Collision=True
+Explosion_C.Actor=True
+Explosion_C.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2044,6 +2050,8 @@ StartMenu_C.Input=True
 /Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane=1
 /Game/2DSideScroller/Textures/Heart_Flipbook.Heart_Flipbook=1
 /Game/2DSideScrollerBP/Blueprints/BulletEnemy.BulletEnemy=1
+/Game/2DSideScroller/Textures/MenuTextures/StartMenu.StartMenu=1
+/Game/2DSideScrollerBP/Maps/StartMenu.StartMenu:PersistentLevel.StartMenu=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2194,11 +2202,11 @@ PreserveScaleRatio=False
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object.Tags.ComponentTags\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object="\"Object.Tags.ComponentTags\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PaperSpriteComponent=
-MeshComponent=
-PrimitiveComponent=
+MeshComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 StaticMeshComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2212,7 +2220,7 @@ Visual="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransf
 CharacterMovementComponent="\"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.Velocity.Velocity\" "
-PaperFlipbookComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PaperFlipbookComponent="\"Object.Tags.ComponentTags\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings=
 AnimationSettings="\"Object.Compression.KeyEndEffectorsMatchNameArray\" "
