--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,14 +93,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -166,10 +165,10 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/SS_Game
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game
 OpenAssetsAtExit=/Game/HUD/StartScreen_Game.StartScreen_Game
-OpenAssetsAtExit=/Game/HUD/OptionsMenuWidget.OptionsMenuWidget
-OpenAssetsAtExit=/Game/HUD/PauseMenuWidget.PauseMenuWidget
 
 [RootWindow]
 ScreenPosition=X=410.000 Y=292.000
@@ -1063,25 +1062,25 @@ MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
 MRUItem0=/Game/HUD/StartScreen_Game
-MRUItem1=/Game/HUD/OptionsMenuWidget
-MRUItem2=/Game/HUD/PauseMenuWidget
-MRUItem3=/Game/2DSideScrollerBP/Maps/SS_Game
-MRUItem4=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem5=/Game/HUD/Start
-MRUItem6=/Game/HUD/Logo
-MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem8=/Game/BP/BP_Coins
-MRUItem9=/Game/HUD/MainUI
-MRUItem10=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem11=/Game/2DSideScroller/Sprites/Coin
-MRUItem12=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem13=/Game/2DSideScroller/Data/AnimationState
-MRUItem14=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem15=/Game/2DSideScroller/Textures/camelpyramid
-MRUItem16=/Game/2DSideScroller/Sprites/NewMaterial
-MRUItem17=/Game/StarterContent/Textures/T_Metal_Rust_D
-MRUItem18=/Game/2DSideScroller/Animations/P_Ambient_Dust
-MRUItem19=/Game/2DSideScroller/Textures/2DBackground
+MRUItem1=/Game/2DSideScrollerBP/Maps/SS_Game
+MRUItem2=/Game/2DSideScroller/Textures/Shift_Mat
+MRUItem3=/Game/2DSideScroller/Textures/Shift_Mat1
+MRUItem4=/Game/2DSideScroller/Textures/Shift
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem6=/Game/HUD/OptionsMenuWidget
+MRUItem7=/Game/HUD/PauseMenuWidget
+MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem9=/Game/HUD/Start
+MRUItem10=/Game/HUD/Logo
+MRUItem11=/Game/BP/BP_Coins
+MRUItem12=/Game/HUD/MainUI
+MRUItem13=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem14=/Game/2DSideScroller/Sprites/Coin
+MRUItem15=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem16=/Game/2DSideScroller/Data/AnimationState
+MRUItem17=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem18=/Game/2DSideScroller/Textures/camelpyramid
+MRUItem19=/Game/2DSideScroller/Sprites/NewMaterial
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2058,6 +2057,15 @@ OptionsMenuWidget_C.Navigation=True
 OptionsMenuWidget_C.Localization=True
 OptionsMenuWidget_C.Designer=True
 OptionsMenuWidget_C.Layout=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+Text3DComponent.TransformCommon=True
+Text3DComponent.Text3D=True
+Text3DComponent.Rendering=True
+Text3DComponent.Tags=True
+Text3DComponent.Activation=True
+Text3DComponent.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -2084,13 +2092,14 @@ OptionsMenuWidget_C.Layout=True
 /Game/HUD/Start.Start=1
 /Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game=0
 /Game/HUD/StartScreen_Game.StartScreen_Game=0
+/Game/2DSideScroller/Textures/Shift.Shift=0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2117,6 +2126,11 @@ StartScreen_Game_C="\"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" "
 PauseMenuWidget_C="\"Object.Render Transform.RenderTransform\" "
 OptionsMenuWidget_C="\"Object.Render Transform.RenderTransform\" "
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2170,8 +2184,13 @@ NodeTemplateCacheCapMB=20.000000
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/Textures/Shift_Mat.Shift_Mat;
+RecentlyPlaced=/Game/2DSideScroller/Textures/Shift.Shift;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Text3D.Text3DActor;/Engine/Transient.ActorFactoryText3D_0
 RecentlyPlaced=/Game/BP/BP_Coins.BP_Coins;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
@@ -2184,7 +2203,6 @@ RecentlyPlaced=/Script/Engine.DecalActor;/Engine/Transient.ActorFactoryDeferredD
 RecentlyPlaced=/Game/2DSideScroller/Animations/P_Ambient_Dust.P_Ambient_Dust;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap;
 
 [MaterialEditor]
