--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -165,14 +165,14 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/SS_Game
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game
 OpenAssetsAtExit=/Game/HUD/StartScreen_Game.StartScreen_Game
 
 [RootWindow]
-ScreenPosition=X=410.000 Y=292.000
-WindowSize=X=1283.000 Y=723.000
+ScreenPosition=X=14.000 Y=9.000
+WindowSize=X=956.000 Y=723.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1055,6 +1055,8 @@ Text3DEditor.TimeStamp=2021.08.31-17.19.29
 Text3DEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2021.08.31-17.14.52
 SequencerWidgets.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.08.31-17.14.48
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/SS_Game
