--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,14 +152,17 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.PluginFilters=
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/StartMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScroller/Animations/Explosion1.Explosion1
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Explosion.Explosion
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu.DeathMenu
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/StartMenu.StartMenu
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1084,39 +1087,42 @@ TakeRecorderSources.TimeStamp=2022.12.12-23.46.50
 TakeRecorderSources.LastCompileMethod=Unknown
 TakeRecorder.TimeStamp=2022.12.12-23.46.50
 TakeRecorder.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.11.02-13.12.00
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem1=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem2=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem3=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem4=/Game/2DSideScrollerBP/Maps/Tutorial4
-MRUItem5=/Game/2DSideScrollerBP/Maps/Tutorial3
-MRUItem6=/Game/2DSideScrollerBP/Maps/Level1
-MRUItem7=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem8=/Game/2DSideScrollerBP/Maps/Tutorial
+MRUItem1=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem2=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem3=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem4=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem5=/Game/2DSideScrollerBP/Maps/Tutorial4
+MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial3
+MRUItem7=/Game/2DSideScrollerBP/Maps/Level1
+MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/Explosion
-MRUItem2=/Game/2DSideScroller/Textures/Explosion1
-MRUItem3=/Game/2DSideScroller/Textures/Explosion
-MRUItem4=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem6=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Bullet
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
-MRUItem13=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem14=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
-MRUItem15=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem16=/Game/2DSideScrollerBP/Maps/FullLevel_Map
-MRUItem17=/Game/2DSideScroller/Animations/Enemy_Hurt
-MRUItem18=/Game/Data/AnimationStateEnemy
-MRUItem19=/Game/2DSideScrollerBP/Blueprints/HpHud
+MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem1=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem2=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem3=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/Explosion
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem6=/Game/2DSideScroller/Textures/Explosion1
+MRUItem7=/Game/2DSideScroller/Textures/Explosion
+MRUItem8=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/Bullet
+MRUItem14=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
+MRUItem15=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem16=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
+MRUItem17=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
+MRUItem18=/Game/2DSideScrollerBP/Maps/FullLevel_Map
+MRUItem19=/Game/2DSideScroller/Animations/Enemy_Hurt
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2002,6 +2008,14 @@ Explosion_C.Rendering=True
 Explosion_C.Collision=True
 Explosion_C.Actor=True
 Explosion_C.Input=True
+Tutorial1_C.Tick=True
+Tutorial1_C.Replication=True
+Tutorial1_C.Actor=True
+Tutorial1_C.Input=True
+DeathScreen_C.Tick=True
+DeathScreen_C.Replication=True
+DeathScreen_C.Actor=True
+DeathScreen_C.Input=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2058,7 +2072,7 @@ InstalledPlugins=XRVisualization
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,
-CapsuleComponent=CameraComponent.PostProcess.Lens,
+CapsuleComponent=
 2DSideScrollerCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
@@ -2158,6 +2172,7 @@ EnemyBoundaries_C=CameraComponent.PostProcess.Lens,
 FullLevel_TP_C=CameraComponent.PostProcess.Lens,
 Heal_C=CameraComponent.PostProcess.Lens,
 StartMenu_C=
+DeathMenu_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2202,7 +2217,7 @@ PreserveScaleRatio=False
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object.Tags.ComponentTags\" "
-Object="\"Object.Tags.ComponentTags\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PaperSpriteComponent=
 MeshComponent="\"Object.Tags.ComponentTags\" "
@@ -2214,9 +2229,9 @@ ShapeComponent=
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.Velocity.Velocity\" "
 EnemyBoundaries_C="\"Object.Actor.Tags\" "
-Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 CharacterMovementComponent="\"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.Velocity.Velocity\" "
@@ -2250,15 +2265,18 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagar
 TakeRecorderProjectSettings="\"Object.Take Recorder.Settings.DefaultTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].DefaultPropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[0].ExcludePropertyTracks\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1]\" \"Object.Take Recorder.Settings.DefaultTracks.DefaultTracks[1].DefaultPropertyTracks\" "
 CapsuleComponent=
 Enemy_C="\"Object.Actor.Tags\" "
-PaperCharacter="\"Object.Actor.Tags\" "
-Character="\"Object.Actor.Tags\" "
-Pawn="\"Object.Actor.Tags\" "
-2DSideScrollerCharacter_C="\"Object.Actor.Tags\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PaperCharacter=
+Character=
+Pawn=
+2DSideScrollerCharacter_C=
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
@@ -2277,7 +2295,6 @@ RecentlyPlaced=/Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_2_TP1.Tutorial_2_TP1;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/ResetTutorial2.ResetTutorial2;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial2_Ruins.Tutorial2_Ruins;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial1_Ruins.Tutorial1_Ruins;
 
 [MessageLog]
